{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 103,
  "lineage": "fc8d0a36-94b5-1e5f-70ab-03ce394210f2",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_app_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-31T05:58:55.082-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-interns/global/firewalls/allow-app-servers-enes",
            "log_config": [],
            "name": "allow-app-servers-enes",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/app-network-enes",
            "priority": 1000,
            "project": "devops-interns",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/firewalls/allow-app-servers-enes",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "app-servers-enes"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.app_network_enes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-31T05:53:08.553-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-interns/global/firewalls/allow-mysql-enes",
            "log_config": [],
            "name": "allow-mysql-enes",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/app-network-enes",
            "priority": 1000,
            "project": "devops-interns",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/firewalls/allow-mysql-enes",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "mysql-instance-enes"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.app_network_enes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2023-08-31T05:42:00.241-07:00",
            "id": "projects/devops-interns/regions/us-central1/forwardingRules/load-balancer",
            "ip_address": "35.192.75.56",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "load-balancer",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "devops-interns",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/regions/us-central1/forwardingRules/load-balancer",
            "target": "https://www.googleapis.com/compute/v1/projects/devops-interns/regions/us-central1/targetPools/target-pool"
          },
          "dependencies": [
            "google_compute_instance.app_servers",
            "google_compute_network.app_network_enes",
            "google_compute_subnetwork.app_subnetwork",
            "google_compute_target_pool.target_pool"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230814",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devops-interns/zones/us-central1-a/disks/app-server-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devops-interns/zones/us-central1-a/instances/app-server-1",
            "instance_id": "6121053721118717078",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "debian:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDHY05ArIbUt5efFE0bINDaOC5j4rHmDlHDri0ZI0JQ2dmf1KqyIqqVBpZuU+OzwnmkeBVElSeiaG6oS5UMiOUFLdMtgZ+7+FXzX7XjqGDqCWuhb5aTrC3uxIXDOdHPZFM/kJ+4d6prp/DhhXtlB0mk57jRJ39NRi+0Q+RwBa+oLc17bY7qEts/0mi51rWOAxQ0EQrxEHfpGN3UPJEe4A5+id3bB0MdIHmInHxL/YkO6Yu5Lw2X80+pGC6qEuV7yQ1NrWNa2W0CCGQsIv8ZX/vpBHib2b0VKioQ7Gd8pBM1PlEyBPUgzFemvkxwVIoRwztEXTqxG6Z7vCqXw3/m4efMlxRHDCyTLjFOlhLL/TTBJBShiOGWUZ7gZuU3voL7p0k9tR88HkcIOKqfz5HgVyfjzHkoT2cuS1Rz18oERknYIH [...]
            },
            "metadata_fingerprint": "EkjMR6TGiWQ=",
            "name": "app-server-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.69.238.134",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/app-network-enes",
                "network_ip": "10.13.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-interns/regions/us-central1/subnetworks/app-subnetwork",
                "subnetwork_project": "devops-interns"
              }
            ],
            "project": "devops-interns",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/zones/us-central1-a/instances/app-server-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "app-servers-enes"
            ],
            "tags_fingerprint": "Zxkg5JX4ofA=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.app_network_enes",
            "google_compute_subnetwork.app_subnetwork"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230814",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devops-interns/zones/us-central1-a/disks/app-server-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devops-interns/zones/us-central1-a/instances/app-server-2",
            "instance_id": "5815933957306135701",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "debian:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDHY05ArIbUt5efFE0bINDaOC5j4rHmDlHDri0ZI0JQ2dmf1KqyIqqVBpZuU+OzwnmkeBVElSeiaG6oS5UMiOUFLdMtgZ+7+FXzX7XjqGDqCWuhb5aTrC3uxIXDOdHPZFM/kJ+4d6prp/DhhXtlB0mk57jRJ39NRi+0Q+RwBa+oLc17bY7qEts/0mi51rWOAxQ0EQrxEHfpGN3UPJEe4A5+id3bB0MdIHmInHxL/YkO6Yu5Lw2X80+pGC6qEuV7yQ1NrWNa2W0CCGQsIv8ZX/vpBHib2b0VKioQ7Gd8pBM1PlEyBPUgzFemvkxwVIoRwztEXTqxG6Z7vCqXw3/m4efMlxRHDCyTLjFOlhLL/TTBJBShiOGWUZ7gZuU3voL7p0k9tR88HkcIOKqfz5HgVyfjzHkoT2cuS1Rz18oERknYIH [...]
            },
            "metadata_fingerprint": "EkjMR6TGiWQ=",
            "name": "app-server-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.69.133.172",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/app-network-enes",
                "network_ip": "10.13.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-interns/regions/us-central1/subnetworks/app-subnetwork",
                "subnetwork_project": "devops-interns"
              }
            ],
            "project": "devops-interns",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/zones/us-central1-a/instances/app-server-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "app-servers-enes"
            ],
            "tags_fingerprint": "Zxkg5JX4ofA=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.app_network_enes",
            "google_compute_subnetwork.app_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mysql_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230814",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devops-interns/zones/us-central1-a/disks/mysql-instance-enes"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devops-interns/zones/us-central1-a/instances/mysql-instance-enes",
            "instance_id": "3315466789996802807",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "debian:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDHY05ArIbUt5efFE0bINDaOC5j4rHmDlHDri0ZI0JQ2dmf1KqyIqqVBpZuU+OzwnmkeBVElSeiaG6oS5UMiOUFLdMtgZ+7+FXzX7XjqGDqCWuhb5aTrC3uxIXDOdHPZFM/kJ+4d6prp/DhhXtlB0mk57jRJ39NRi+0Q+RwBa+oLc17bY7qEts/0mi51rWOAxQ0EQrxEHfpGN3UPJEe4A5+id3bB0MdIHmInHxL/YkO6Yu5Lw2X80+pGC6qEuV7yQ1NrWNa2W0CCGQsIv8ZX/vpBHib2b0VKioQ7Gd8pBM1PlEyBPUgzFemvkxwVIoRwztEXTqxG6Z7vCqXw3/m4efMlxRHDCyTLjFOlhLL/TTBJBShiOGWUZ7gZuU3voL7p0k9tR88HkcIOKqfz5HgVyfjzHkoT2cuS1Rz18oERknYIH [...]
            },
            "metadata_fingerprint": "EkjMR6TGiWQ=",
            "name": "mysql-instance-enes",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.136.1.167",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/app-network-enes",
                "network_ip": "10.13.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-interns/regions/us-central1/subnetworks/app-subnetwork",
                "subnetwork_project": "devops-interns"
              }
            ],
            "project": "devops-interns",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/zones/us-central1-a/instances/mysql-instance-enes",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "mysql-instance-enes"
            ],
            "tags_fingerprint": "LLyWqexqsNA=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.app_network_enes",
            "google_compute_subnetwork.app_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "app_network_enes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/devops-interns/global/networks/app-network-enes",
            "mtu": 0,
            "name": "app-network-enes",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "devops-interns",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/app-network-enes"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/devops-interns/global/networks/load-balancer",
            "mtu": 0,
            "name": "load-balancer",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "devops-interns",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/load-balancer"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "app_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-31T05:41:15.420-07:00",
            "gateway_address": "10.13.0.1",
            "id": "projects/devops-interns/regions/us-central1/subnetworks/app-subnetwork",
            "ip_cidr_range": "10.13.0.0/24",
            "name": "app-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/app-network-enes",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "devops-interns",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/regions/us-central1/subnetworks/app-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.app_network_enes"
          ]
        }
      ]
    }
  ]
}